--- a/blogpost.html
+++ b/blogpost.html
@@ -9,10 +9,13 @@
 </head>
 <body>
     <div id="continer">
+        <div id="cabecera" >
+            cabecera
+        
         <div id="post">
             <h1>este es el titulo atractivo e interesante del post </h1>
             <p>este es el parrafo de inicio donde vamos a explicar las cosas increibles0</p>
-        
+        </div>
         </div>
     </div>
     <h1>Aqui vamos a hacer un blog de warrior support store</h1>
