agregamos git cabecera en la linea 13

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="continer">
         <div id="cabecera" >
-            cabecera
+            cabecera  en git master y git cabecera
         
         <div id="post">
             <h1>este es el titulo atractivo e interesante del post </h1>
