--- a/blogpost.html
+++ b/blogpost.html
@@ -10,10 +10,10 @@
 <body>
     <div id="continer">
         <div id="cabecera" >
-            cabecera  en git master y git cabecera
-        
+            cabecera  en git master
+            
         <div id="post">
-            <h1>este es el titulo atractivo e interesante del post </h1>
+            <h1>este es el titulo atractivo e interesante del post ya que warrior suppor store esta teniendo exito como tienda de accesorios para telefonia y me da gusto que asi sea browwwwwwwww </h1>
             <p>este es el parrafo de inicio donde vamos a explicar las cosas increibles0</p>
         </div>
               </div>
