--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Warrior Support Store</title>
+    <title>Warrior Support Store Tienda de Accesorios para celular</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
