--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="continer"> 
         <div id="cabecera" >
+            <img src="imagenes/dragon.png" alt="">
             este es mi blog de cabecera
             
         <div id="post">
