--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="continer"> 
         <div id="cabecera" >
-            este es mi blog de cabecera
+            este es mi blog de anita platzy
             
         <div id="post">
             <h1>este es el titulo atractivo e interesante del post ya que warrior suppor store esta teniendo exito como tienda de accesorios para telefonia y me da gusto que asi sea browwwwwwwww </h1>
